Correct order of buttons, and change the align of the buttons

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -327,4 +327,7 @@ body {
     filter: brightness(0) invert(1);
   }
 
+  mat-dialog-actions {
+    justify-content: flex-end;
+  }
 }
